# LSPbridge

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  EXAMPLES.md  LICENSE  README.md  TODO.md  architecture.md  benchmark-config.toml  deny.toml  lsp-bridge-config.toml  lspbridge.toml  test_runner.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  test.yml
benches/: file_scanning_benchmarks.rs  lsp_bridge_benchmarks.rs  simple_bench.rs
docs/: API.md  BENCHMARK_DASHBOARD.md  CONFIGURATION.md  INSTALLATION.md  PERFORMANCE_GUIDE.md  README.md  REFACTORING_PLAN.md  SECURITY.md  database_pooling.md  incremental-processing.md
docs/api/: README.md  cli-reference.md  examples.md  extension-api.md  rust-api.md
editors/neovim/: Makefile  README.md
editors/neovim/lua/lsp-bridge/: init.lua  telescope.lua
editors/neovim/plugin/: lsp-bridge.vim
editors/vscode/: .eslintrc.json  README.md  package.json  package.sh
editors/vscode/src/: diagnosticExporter.ts  extension.ts  historyView.ts  lspBridgeProvider.ts  quickFixProvider.ts
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: lib.rs
examples/: builder_pattern_demo.rs  database_pooling_example.rs  multi_repo_example.rs  performance_optimization_demo.rs  sample_diagnostics.json
resources/: default.lspbridge.toml
scripts/: README.md  benchmark-dashboard.sh  generate_benchmark_charts.py  test-benchmark-dashboard.sh
src/: error.rs  error_patterns.rs  lib.rs  main.rs
src/ai_training/: annotation.rs  data_structures.rs  export.rs  mod.rs  synthetic.rs
src/analyzers/: base.rs  error_codes.rs  language_analyzer.rs  macros.rs  mod.rs  rust_analyzer.rs  rust_analyzer.rs.old  typescript_analyzer.rs  typescript_analyzer.rs.old
src/analyzers/rust_analyzer/: context.rs  mod.rs
src/analyzers/rust_analyzer/analyzers/: borrow_checker.rs  lifetime.rs  mod.rs  move_semantics.rs  type_system.rs
src/analyzers/rust_analyzer/fixes/: fix_suggestions.rs  mod.rs
src/analyzers/typescript_analyzer/: context.rs  mod.rs
src/analyzers/typescript_analyzer/analyzers/: imports.rs  mod.rs  property_errors.rs  type_inference.rs  type_system.rs
src/analyzers/typescript_analyzer/fixes/: fix_suggestions.rs  mod.rs
src/capture/: capture_service.rs  memory_cache.rs  mod.rs
src/cli/: args.rs  mod.rs  multi_repo.rs
src/cli/commands/: ai_training.rs  config.rs  export.rs  history.rs  mod.rs  query.rs  quick_fix.rs  watch.rs
src/cli/multi_repo/: analysis.rs  config.rs.bak  discovery.rs  handlers.rs  mod.rs  types.rs  workspace.rs
src/config/: mod.rs  paths.rs  validation.rs
src/core/: async_processor.rs  constants.rs  context_ranking.rs  database_pool.rs.bak  dependency_analyzer.rs  dependency_analyzer.rs.bak  diagnostic_grouping.rs  diagnostic_prioritization.rs  dynamic_config.rs  enhanced_processor.rs  error_recovery.rs  errors.rs  git_integration.rs  health_dashboard.rs  incremental_processor.rs  io_utils.rs  macros.rs  memory_manager.rs  metrics.rs  mod.rs  performance_optimizer.rs  persistent_cache.rs  rate_limiter.rs  security_config.rs  semantic_context.rs  simple_enhanced_processor.rs  traits.rs  types.rs  utils.rs
src/core/config/: legacy.rs  mod.rs  traits.rs  unified.rs
src/core/context_ranking/: formatter.rs  mod.rs  scorer.rs  token_estimator.rs  types.rs
src/core/database_pool/: builder.rs  connection.rs  manager.rs  mod.rs  monitoring.rs  pool.rs  types.rs
src/core/dependency_analyzer/: analyzer.rs  cache.rs  mod.rs  types.rs
src/core/dynamic_config/: mod.rs  types.rs
src/core/health_dashboard/: mod.rs  types.rs
src/core/memory_manager/: cache.rs  eviction.rs  mod.rs  monitor.rs  types.rs
src/core/semantic_context/: mod.rs  semantic_context.rs.bak  types.rs
src/core/simple_enhanced_processor/: mod.rs  pipeline.rs  types.rs
src/export/: export_service.rs  mod.rs
src/format/: format_converter.rs  mod.rs
src/format/format_converter/: factory.rs  mod.rs  types.rs
src/history/: analyzer.rs  mod.rs  storage.rs  storage.rs.old  visualization.rs
src/history/storage/: cache.rs  mod.rs  types.rs
src/multi_repo/: aggregator.rs  collaboration.rs  collaboration.rs.bak  cross_repo.rs  mod.rs  monorepo.rs  registry.rs
src/multi_repo/collaboration/: database.rs  manager.rs  mod.rs  sync.rs  types.rs
src/multi_repo/cross_repo/: mod.rs  types.rs
src/multi_repo/monorepo/: mod.rs  types.rs  utils.rs
src/privacy/: mod.rs  privacy_filter.rs  workspace_filter.rs
src/project/: build_system.rs  build_system.rs.old  mod.rs  structure_analyzer.rs
src/project/build_system/: mod.rs  types.rs
src/project/structure_analyzer/: analyzer.rs  mod.rs  renderer.rs  types.rs
src/query/: api.rs  api.rs.bak  executor.rs  mod.rs  parser.rs  repl.rs
src/query/api/: mod.rs  router.rs  types.rs  validation.rs
src/query/executor/: cache.rs  engines.rs  filters.rs  mod.rs  processing.rs  types.rs
src/query/parser/: ast.rs  errors.rs  grammar.rs.bak  lexer.rs  mod.rs
src/quick_fix/: confidence.rs  engine.rs  mod.rs  rollback.rs  verification.rs
src/security/: mod.rs  path_validation.rs
test-files/go/: go.mod
test-files/gradle/: build.gradle  build.gradle.kts
test-files/maven/: pom.xml
tests/: integration_test.rs  mock_lsp_server.rs  monorepo_detection_test.rs  multi_repo_test.rs
tests/ai_training/: export_tests.rs  mod.rs  synthetic_tests.rs
tests/common/: lib.rs  mod.rs
tests/fixtures/: real_world_examples.rs
tests/fixtures/python/: errors.py
tests/fixtures/rust/: errors.rs
tests/fixtures/typescript/: errors.ts
tests/integration/: dynamic_config_tests.rs  end_to_end_tests.rs  enhanced_processor_tests.rs  git_integration_tests.rs  health_dashboard_tests.rs  lsp_test_helpers.rs  migration_validation_tests.rs  mod.rs  multi_repo_integration_tests.rs  privacy_filter_integration_tests.rs  privacy_integration_tests.rs  quick_fix_verification_tests.rs  real_world_integration_tests.rs  rust_analyzer_test.rs  semantic_context_tests.rs  simple_lsp_tests.rs  typescript_lsp_test.rs  workflow_tests.rs
tests/quick_fix/: mod.rs
(+99 files in other folders)
